--- a/pepper/templates/main.html
+++ b/pepper/templates/main.html
@@ -8,19 +8,55 @@
         Flask #2
     </title>
     <style>
+         #full {
+        /* margin: 0;
+        padding: 0;    */
+        display: flex;
+        background-color: grey;
+    }
+    #screen_left {
+        flex: 1;
+        background-color: black;
+        float: left;
+    }
+    #screenleft-1 {
+        flex: 1;
+        background-color: red;
+    }
+    #screenleft-2 {
+        flex: 1;
+        background-color: yellow;
+    }
+    #screenright {
+        flex: 2;
+        background-color: blue;
+        float: left;
+    }
         	.my_btn {
             background-color: skyblue;
             color: white;
             border: none;
             font-size: 30px;
-            padding: 50px 50px;
+            padding: 130px 160px;
             }
     </style>
 </head>
 <body>
-    <form action=" " method="POST">
-        <button type="submit", value="Button", class='my_btn'>페이지 넘기기2</button>
-    </form>
+    <div id="full">
+        <div id="screen_left">
+            <div id="screenleft-1">
+                <form action=" " method="POST">
+                    <button type="submit", value="Button", class='my_btn'>페이지 넘기기1</button>
+                </form>
+            </div>
+            <div id="screenleft-2">
+                <form action=" " method="POST">
+                    <button type="submit", value="Button", class='my_btn'>페이지 넘기기2</button>
+                </form>
+            </div>
+        </div>
+        <div id="screenright"></div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
 </script>
