--- a/pepper/templates/main.html
+++ b/pepper/templates/main.html
@@ -69,6 +69,28 @@
     </div>
 </div>
 
+<!--맹근거-->
+<div class="wrap">
+    <a href="#pop_info_1" class="btn_open">김진호 교수연구실</a>
+    <a href="#pop_info_2" class="btn_open">정민수 교수연구실</a>
+  
+  
+    <div id="pop_info_1" class="pop_wrap" style="display:none;">
+      <div class="pop_inner">
+        <p class="dsc">김진호 010-1234-5678</p>
+        <button type="button" class="btn_close">닫기</button>
+      </div>
+    </div>
+  
+    <div id="pop_info_2" class="pop_wrap" style="display:none;">
+      <div class="pop_inner">
+        <p class="dsc">정민수 010-1212-4545</p>
+        <button type="button" class="btn_close">닫기</button>
+      </div>
+    </div>
+  </div>
+
+
 <script>
     // 왼쪽 패널의 크기를 측정하여 버튼의 크기를 조정하는 함수
     function adjustButtonSize() {
