--- a/pepper/templates/main.html
+++ b/pepper/templates/main.html
@@ -51,20 +51,20 @@
 </head>
 <body>
 
-<div class="container">
-    <div class="left-panel">
-        <div class="top-panel">
-            <form action=" " method="POST">
-                <button type="submit" value="Button" class="my_btn">페이지 넘기기2</button>
-            </form>
+    <div class="container">
+        <div class="left-panel">
+            <div class="top-panel">
+                <form action="/test1" method="POST">
+                    <button type="submit" value="Button" class="my_btn">페이지 넘기기1</button>
+                </form>
+            </div>
+            <div class="bottom-panel">
+                <form action="/test2" method="POST">
+                    <button type="submit" value="Button" class="my_btn">페이지 넘기기2</button>
+                </form>
+            </div>
         </div>
-        <div class="bottom-panel">
-            <form action=" " method="POST">
-                <button type="submit" value="Button" class="my_btn">페이지 넘기기2</button>
-            </form>
-        </div>
-    </div>
-    <div class="right-panel">
+        <div class="right-panel">
         
     </div>
 </div>
