--- a/pepper/templates/main.html
+++ b/pepper/templates/main.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="right-panel">
-        
+            <img src="../tmp_files/version_0/map.png">
     </div>
 </div>
 
