--- a/pepper/templates/backup/main4.html
+++ b/pepper/templates/backup/main4.html
@@ -87,13 +87,13 @@ body {
     height: 9.6rem;
     font-weight: 600;
   }
-  .auto-group-hsr5-9BD {
+  .auto-group-hsr5-9BD{
     margin-right: 102.6rem;
     width: calc(100% - 102.6rem);
     display: flex;
     align-items: center;
     flex-shrink: 0;
- 
+  }
     .logo01jpg-1-gS3 {
       flex-shrink: 0;
       margin-right: 1.3rem;
@@ -113,7 +113,7 @@ body {
       color: #585858;
       white-space: nowrap;
     }
-  }
+  
 
 
 
@@ -223,10 +223,11 @@ body {
       <p class="ai--ZRy">ai 산업 머시깽이</p>
       <!-- <div class="auto-group-xars-EHD">탭하여 시작하기</div> -->
       <from action="/start" method="POST">
-      <button class="auto-group-xars-EHD">탭하여 시작하기</button>
+        <button type= "submit" value="Button" class="auto-group-xars-EHD">탭하여 시작하기</button>
       </from>
       <div class="auto-group-hsr5-9BD">
-        <img class="logo01jpg-1-gS3" src="./logo01jpg-1.png"/>
+        <img class="logo01jpg-1-gS3" src="{{url_for('static', filename='IMG/logo01jpg.png') }}">
+        <!-- <img class="logo01jpg-1-gS3" src="https://i.namu.wiki/i/jcc64G_f4NeCguv1q4M3yuMz8-Ux1yCfQr-XA0LFp4FClRRvOmnI6Wtuc7zFsa8-wekpHrwidGZNL1WAJj7B3w.svg"/> -->
         <p class="kyungnam-univ-bZ1">Kyungnam Univ</p>
       </div>
     </div>
