--- a/pepper/templates/main.html
+++ b/pepper/templates/main.html
@@ -55,17 +55,18 @@
         <div class="left-panel">
             <div class="top-panel">
                 <form action="/test1" method="POST">
-                    <button type="submit" value="Button" class="my_btn">페이지 넘기기1</button>
+                    <button type="submit" value="Button" class="my_btn">지점 이동</button>
                 </form>
             </div>
             <div class="bottom-panel">
                 <form action="/test2" method="POST">
-                    <button type="submit" value="Button" class="my_btn">페이지 넘기기2</button>
+                    <button type="submit" value="Button" class="my_btn">대화하기</button>
                 </form>
             </div>
         </div>
         <div class="right-panel">
-            <img src="../tmp_files/version_0/map.png">
+            <img src="{{url_for('static', filename='assets/map.png') }}">
+
     </div>
 </div>
 
