--- a/pepper/templates/main.html
+++ b/pepper/templates/main.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="right-panel">
-            <img src="{{url_for('static', filename='assets/map.png') }}">
+            <img src="{{url_for('static', filename='assets/map.png') }}", width="1000", height="800">
 
     </div>
 </div>
